# geepers-kernel

./: .aider.chat.history.md  .aider.input.history  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCY_FIXES_QUICK_START.sh  DOCUMENTATION_RECOMMENDATIONS.md  GEMINI.md  README.md  __init__.py  apply_automated_fixes.sh  batch_humanize_docs.py  coze_agents.json  doc_humanizer.py  doc_humanizer_README.md  exceptions.py  humanize_all_docs.py  naming.py  pyproject.toml  requirements.txt  requirements.txt.backup-20251121_233133  setup.py  sync-to-plugin.sh  test_image_vision.py  test_providers.py
.github/workflows/: ci.yml  tests.yml
api_auth/: __init__.py  auth_manager.py  cli.py
cli/: CLAUDE.md  ping_providers.py
cli/llm/: __init__.py  __main__.py  config.py  main.py  utils.py
data_fetching/: CLAUDE.md
data_fetching/tests/: conftest.py  test_archive_client.py  test_arxiv_client.py  test_factory.py  test_github_client.py  test_openlibrary_client.py  test_package_interface.py  test_pubmed_client.py  test_semantic_scholar.py  test_wikipedia_client.py
document_generation/: CLAUDE.md
examples/: ollama_example.py
geepers_kernel/: cli.py
inbox/GOOD_SNIPPETS/: README.md  app.py  chat.py  ollama.py  providers.py  research.py  tools.py  utils.py
llm_providers/: CLAUDE.md  __init__.py  anthropic_provider.py  factory.py  gemini_provider.py  gradient_provider.py  groq_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py  perplexity_provider.py  xai_provider.py
llm_providers/tests/: conftest.py  test_complexity_router.py  test_dataclasses.py  test_factory.py  test_providers_interface.py
mcp/: CLAUDE.md  app.py  cache_server.py  config_server.py  data_server.py  discovery_resources.py  master_server.py  providers_server.py  stdio_server.py  unified_server.py  utility_server.py  view_costs.py
mcp/.backup-20251118-001627/: app.py  providers_server.py  unified_server.py
mcp/stdio_servers/: cache_stdio.py  data_stdio.py  providers_stdio.py  unified_stdio.py  utility_stdio.py  web_search_stdio.py
mcp/tests/: test_mcp_integration.py
memory/: CLAUDE.md  __init__.py
observability/: CLAUDE.md  __init__.py  cost_tracker.py  metrics.py  pricing.yaml
orchestration/: CLAUDE.md
remote_mcp/: server.py  start.sh
tests/: __init__.py  test_data_tool_modules.py  test_document_parsers.py  test_dreamwalker_app.py  test_embeddings.py  test_multi_search.py  test_ollama_provider.py  test_orchestrators.py  test_provider_tools.py  test_shared_imports.py  test_time_utils.py  test_tool_registry.py  test_utils_enhancements.py  test_vision.py  test_workflow_state.py
tools/: CLAUDE.md  __init__.py  anthropic_tools.py  cohere_tools.py  data_registry.py  data_tool_base.py  elevenlabs_tools.py  fec_tool.py  gemini_tools.py  gradient_tools.py  groq_tools.py  huggingface_tools.py  image_generation_tools.py  mistral_tools.py  module_base.py  openai_tools.py  perplexity_tools.py  registry.py  tts_tools.py  vision_tools.py  web_search_tool.py  xai_tools.py
tools/monarchmoney/: CLAUDE.md  (+20 more)
utils/: CLAUDE.md  vision.py
web/: CLAUDE.md  llm_proxy_blueprint.py  middleware.py  rate_limit.py  universal_proxy.py
(+54 files in other folders)
