[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geepers-kernel"
version = "1.1.0"
description = "Core infrastructure for the geepers agent system — LLM providers, orchestration, data clients, and MCP server"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Luke Steuber", email = "luke@dr.eamer.dev"}]
requires-python = ">=3.8"
keywords = [
    "llm", "llm-providers", "geepers", "orchestration", "anthropic", "openai",
    "xai", "grok", "claude", "gpt", "mistral", "cohere", "gemini",
    "mcp", "model-context-protocol", "multi-agent", "data-fetching", "providers"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "pillow>=11.0.0",
    "arxiv>=2.0.0",
    "gtts>=2.5.0",
    "bibtexparser>=1.4.0",
    "aiohttp>=3.12.14",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://dr.eamer.dev"
Documentation = "https://dr.eamer.dev/shared/"
Repository = "https://github.com/lukeslp/geepers-kernel"
Source = "https://github.com/lukeslp/geepers-kernel"
"Bug Reports" = "https://github.com/lukeslp/geepers-kernel/issues"
Changelog = "https://github.com/lukeslp/geepers-kernel/blob/master/CHANGELOG.md"

[project.optional-dependencies]
anthropic = ["anthropic>=0.71.0"]
openai = ["openai>=2.0.0"]
xai = ["openai>=2.0.0"]
mistral = ["mistralai>=1.0.0"]
cohere = ["cohere>=5.15.0"]
gemini = ["google-generativeai>=0.8.0"]
perplexity = ["openai>=2.0.0"]
groq = ["openai>=2.0.0"]
huggingface = ["huggingface-hub>=0.20.0"]
redis = ["redis>=7.0.0"]
telemetry = [
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
]
all = [
    "anthropic>=0.71.0",
    "openai>=2.0.0",
    "mistralai>=1.0.0",
    "cohere>=5.15.0",
    "google-generativeai>=0.8.0",
    "huggingface-hub>=0.20.0",
    "redis>=7.0.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
]

[tool.setuptools]
# Explicitly list all packages - setuptools isn't finding the root package
packages = ["shared", "shared.api_auth", "shared.data_fetching", "shared.document_generation", "shared.llm_providers", "shared.mcp", "shared.memory", "shared.observability", "shared.orchestration", "shared.tools", "shared.utils", "shared.web"]
package-dir = {"shared" = "."}

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md", "*.html", "*.css"]
